...
            "value" : "Comunidad"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Communauté"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Community"
...
    "appUI.profile" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profil"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
...
            "value" : "Armario"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Garde-robe"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Guardaroba"
...
            "value" : "Catálogo"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Catalogue"
          }
        },
        "it" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Catalogo"
...
